[package]
name = "tic-tac-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "~1.14", features = ["full"] }
ultraviolet = "0.8"
winit = "0.26"
wgpu = "0.11"
